# maintainers-copilot-week7

./: .env.example  .gitignore  DECISIONS.md  EVALS.md  README.md  RUNBOOK.md  alembic.ini  docker-compose.yml  eval_report.json  eval_thresholds.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260520_0001_create_rag_tables.py  20260521_0002_add_rag_metadata_indexes.py  20260521_0003_create_audit_events.py
archive/docs_draft_backup/: DECISIONS.md  EVALS.md  README.md  RUNBOOK.md
artifacts/: classical_classifier.joblib
backend/model_server/: Dockerfile  (+1 more)
docs/: INFRA.md  minio_artifact_storage_plan.md
evals/: rag_golden_set.jsonl  rag_hand_labels.jsonl
reports/: classical_metrics.json  classification_comparison.json  llm_baseline_metrics.json  transformer_confusion_matrix.json  transformer_metrics.json
scripts/: build_clean_rag_issues.py  build_final_rag_corpus.py  eval_classification.py  eval_rag.py  fetch_node_docs.py  fetch_node_resolved_issues.py  generate_artifact_manifest.py  ingest_final_rag_corpus.py  ingest_rag_corpus.py  upload_artifacts_to_minio.py  upload_eval_report_to_minio.py  validate_classification_golden.py  validate_rag_golden.py  verify_rag_no_leakage.py
tests/: test_auth_api.py  test_chat_api.py  test_chat_service.py  test_final_rag_corpus.py  test_hybrid_retrieval.py  test_llm_provider.py  test_memory_api.py  test_minio_upload_scripts.py  test_query_transformer.py  test_rag_api.py  test_rag_chunking.py  test_rag_eval.py  test_redaction.py  test_startup_validation.py  test_widget_api.py
(+108 files in other folders)
