[project]
name = "maintainers-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=1.26.4,<2",
    "pandas>=2.2.3,<2.3",
    "requests>=2.34.2",
    "scikit-learn>=1.4.2,<1.6",
    "torch==2.2.2",
    "transformers==4.39.3",
    "accelerate==0.29.3",
    "datasets==2.18.0",
    "evaluate==0.4.1",
    "tqdm>=4.67.3",
]
